Add CVSSv4 score handling to Finding and GroupedFinding models
Signed-off-by: Tobias Gies <tobias@tobiasgies.de>